--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -26,6 +26,8 @@ services:
     image: superwordpress
     volumes:
       - ./data/html:/var/www/html
+    ports:
+      - 80:80
     environment:
       WORDPRESS_DB_HOST: wordpress-db:3306
       WORDPRESS_DB_USER: wordpress
