add update and language

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -36,8 +36,9 @@ services:
       WORDPRESS_ADMIN_USERNAME: admin
       WORDPRESS_ADMIN_PASSWORD: papamica
       WORDPRESS_ADMIN_EMAIL: papamica@exemple.com
+      WORDPRESS_LANGUAGE: "fr_FR"
       PLUGINS_TO_INSTALL: "mainwp-child elementor updraftplus header-footer-elementor envato-elements include-matomo jetpack wp-mail-smtp wordpress-seo duplicate-post autoptimize contact-form-7"
-      PLUGINS_TO_REMOVE: "hello-dolly askimet"
+      PLUGINS_TO_REMOVE: "hello-dolly akismet"
       THEMES_TO_INSTALL: "hello-elementor"
       THEMES_TO_REMOVE: "twentytwenty twentytwentytwo twentytwentyone"
       WORDPRESS_URL: 
